--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About
 description: We Are EunoWare
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+image: /images/about-header.jpg
 ---
 
 <section>
