--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@ image: /images/about-header.jpg
     <div class="card card-custom"><img class="card-img-top w-100 d-block" src="{{ site.baseurl }}/images/eunoware_landscape_logo.png">
         <div class="card-body">
             <h4 class="card-title card-title-custom">We create, we learn, we grow, we share.</h4>
-            <p class="card-text card-paragraph-custom">We are made up of amateurs and fans, while we are eager to do it professionally. Currently, we're developing apps for mobile platform. Steamulate is our debut product, next we'll likely be turning to game development.</p><a class="btn btn-primary card-button-custom" href="mailto:steamulate.cc@gmail.com" role="button">Send Email</a><a class="btn btn-primary card-button-custom" href="https://twitter.com/EunoWare" role="button"> Follow on Twitter</a></div>
+            <p class="card-text card-paragraph-custom">We are made up of amateurs and fans, while we are eager to do it like a pro. Currently, we're developing apps for mobile platform. Steamulate is our debut product, and we will bring you more cool stuff in the next year.</p><a class="btn btn-primary card-button-custom" href="mailto:steamulate.cc@gmail.com" role="button">Send Email</a><a class="btn btn-primary card-button-custom" href="https://twitter.com/EunoWare" role="button"> Follow on Twitter</a></div>
     </div>
 </section>
