--- a/wip.html
+++ b/wip.html
@@ -3,7 +3,7 @@ layout: page
 sitemap: false
 title: WIP
 description: Still working in progress. Please check back later!
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+image: /images/feature-header.jpg
 ---
     <section>
             <p class="text-center heading-custom">We're sorry for any inconvience.</p>
