--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 layout: page
 title: Terms of Use
 description: "Version: 1.0 Last Updated: February 2019"
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+image: /images/about-header.jpg
 ---
     <section>
             <p class="paragraph-custom"><br>By using Steamulate (this app), you agree to our Terms of Use. This Terms of Use play an important role in maintaining a positive experience for everyone using Steamulate. Be sure to check back
