--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 layout: page
 title: Privacy Policy
 description: "Version: 1.0 Last Updated: February 2019"
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+image: /images/about-header.jpg
 ---
     <section>
             <p class="paragraph-custom"><br>First of all, thanks for trusting us by using our service. We respect the privacy of our users by minimizing the data we collect and stating clearly how we shall use them. By using Steamulate
