--- a/features.html
+++ b/features.html
@@ -2,7 +2,7 @@
 layout: page
 title: Features
 description: A Complete Toolkit
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+image: /images/feature-header.jpg
 ---
         <section>
             <p class="paragraph-custom"><br>Steamulate has lots of cool features. First thing first, let's talk about its farming feature. To make you have a better grasp at it, we made this table which compares Steamulate with some other popular cards farming tools.</p>
