--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                     <p class="text-center p-brief">◎Easy to use</p>
                     <p class="text-center p-brief">◎Lots of cool features</p>
                     <p class="text-center p-brief">◎Use your old device to farm cards</p>
-                    <p class="text-center p-brief">◎Best and yet the only Steam account manager for iOS</p>
+                    <p class="text-center p-brief">◎The best and the only Steam account manager for iOS</p>
                 </div>
             </div>
         </section>
@@ -59,7 +59,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-send icon"></i>
                             <h3 class="name">Smooth Workflow</h3>
-                            <p class="description">We have a console interface that allows you to perform operations on multiple accounts concurrently. Don't be afraid though, the way you enter commands is exactly the same that you talk to your friends on Twitter, Instagram,
+                            <p class="description">We have a console interface that allows you to perform operations on multiple accounts concurrently. Don't be afraid though, the way you enter commands is exactly the same as how you talk to your friends on WhatsApp, Line,
                                 etc. Yup the console is like a chat bot, and by using the in-app tapboard you don't even need to type commands yourself. If you choose to enter them manually, there are also auto-completion tweaks to help you with command
                                 names. It's really cool, try it out yourself!</p>
                         </div>
@@ -67,12 +67,12 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                             <h3 class="name">Browser Included</h3>
                             <p class="description">We also have a built-in browser. When you logged in to your account, the browser would log in to it as well. And when you switched to another account, the browser switched accordingly. Imagine that you want to send message
                                 with another account, or accept a trade offer received in another one, with our browser, you can do this real quick. We even have several built-in userscripts. Maybe you want something like SteamGifts one-click entry on
-                                your phone long time ago?</p>
+                                your phone from long time ago?</p>
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-legal icon"></i>
                             <h3 class="name">Safe to Use</h3>
                             <p class="description">We understand how important your Steam accounts are because we're gamers too. All your information, sensitive or not, won't be sent to anyone other than valid Steam network servers, including us. When your credentials are stored
-                                on hard disk, they're always strongly encrypted that even we are not possible to break it directly. We also have a clear privacy policy you should check out, if you'd like to know how we're doing to protect them.</p>
+                                on hard disk, they're always strongly encrypted that even we are not possible to break it directly. We also have a clear privacy policy you should check out, if you would like to know how we're doing to protect them.</p>
                         </div>
                     </div>
                 </div>
