--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-magic icon"></i>
                             <h3 class="name">Works everywhere</h3>
                             <p class="description">Are you managing your Steam accounts on your PC? Do you leave your PC open just to farm trading cards? Be tired of dry console programs? Well, yon don't have to do that anymore. With some magic, now you can farm cards directly
-                                from your phones, regardless of how many accounts you have, with the same—even higher—speed while enjoying the relaxing user experiences.</p>
+                                from your phones, regardless of how many accounts you have, with the same—even higher—speed while enjoying the most relaxing user experience.</p>
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-briefcase icon"></i>
                             <h3 class="name">Complete Toolkit</h3>
