--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 layout: page
 title: 404
 description: Not Found
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+image: /images/feature-header.jpg
 permalink: /404.html
 ---
+    <section>
+            <p class="text-center heading-custom">We're sorry for any inconvience.</p>
+    </section>
