--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Privacy Policy
-description: "Version: 1.0 Last Updated: February 2019"
+description: "Version: 1.1 | Last Updated: March 2019"
 image: /images/about-header.jpg
 ---
     <section>
