--- a/features.html
+++ b/features.html
@@ -93,7 +93,7 @@ image: /images/feature-header.jpg
                     </tbody>
                 </table>
             </div>
-            <p class="paragraph-custom"><br>And by typing to the chat bot in console interface of Steamulate, you can also do these things...</p>
+            <p class="paragraph-custom"><br>And by taking advantage of console commands, you can also do these things...</p>
             <div class="table-responsive table-custom">
                 <table class="table table-striped">
                     <thead class="table-header">
@@ -103,6 +103,10 @@ image: /images/feature-header.jpg
                         </tr>
                     </thead>
                     <tbody class="table-body">
+                        <tr>
+                            <td>Can transfer inventory items between accounts easily.</td>
+                            <td>Are you sitting there all day long just to wait for your inventory page to load?</td>
+                        </tr>
                         <tr>
                             <td>Can make booster packs&nbsp;with schedule automatically.</td>
                             <td>No need to manually craft them everyday. Enter once and you're all set.</td>
@@ -146,6 +150,6 @@ image: /images/feature-header.jpg
                     </tbody>
                 </table>
             </div>
-            <p class="paragraph-custom"><br>At last... As we all know, Steam is a game itself. Playing games on Steam is fun, but having library "+1", boosting Steam level, crafting cool badges might just be more fun for some of us. The same things happens on Steamulate, by literally
-                playing Steam, you can unlock secret achievements. You'll never know what you'll dig out, an Easter egg? ("It's not a bug, it's a feature.") We're excited to see how far you can go!</p>
+            <p class="paragraph-custom"><br>At last... As we all know, Steam is a game itself. Playing games on Steam is fun, but having library "+1", boosting Steam level and crafting cool badges might just be more fun for some of us. The same things happens on Steamulate, by literally
+                playing Steam, you can unlock secret achievements. You'll never know what you'll dig out, an Easter egg? Or more surprisingly, a bug? ("It's not a bug, it's a feature!") We're excited to see how far you can go.</p>
         </section>
