--- a/features.html
+++ b/features.html
@@ -151,5 +151,5 @@ image: /images/feature-header.jpg
                 </table>
             </div>
             <p class="paragraph-custom"><br>At last... As we all know, Steam is a game itself. Playing games on Steam is fun, but having library "+1", boosting Steam level and crafting cool badges might just be more fun for some of us. The same things happens on Steamulate, by literally
-                playing Steam, you can unlock secret achievements. You'll never know what you'll dig out, an Easter egg? Or more surprisingly, a bug? ("It's not a bug, it's a feature!") We're excited to see how far you can go.</p>
+                playing Steam, you can unlock secret achievements. You'll never know what you'll dig out, an Easter egg? Or more surprisingly, a glitch? ("It's not a bug, it's a feature!") We're excited to see how far you can go.</p>
         </section>
