--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-legal icon"></i>
                             <h3 class="name">Safe to Use</h3>
-                            <p class="description">We understand how important your Steam accounts are because we're gamers too. All your information, sensitive or not, won't be sent to anyone other than valid Steam network servers, including us. When your credentials are stored
+                            <p class="description">We understand how important your Steam accounts are because we're gamers too. All your account information, sensitive or not, won't be sent to anyone other than valid Steam network servers, including us. When your credentials are stored
                                 on hard disk, they're always strongly encrypted that even we are not possible to break it directly. We also have a clear privacy policy you should check out, if you would like to know how we're doing to protect them.</p>
                         </div>
                     </div>
