--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-briefcase icon"></i>
                             <h3 class="name">Complete Toolkit</h3>
-                            <p class="description">Steamulate is not just about idling. Have 20 keys of the same game and want to redeem them to 20 different accounts? It's chrismas and you would like to post "Merry Xmas!" to every friend's profile page? Want to make booster
+                            <p class="description">Steamulate is not just about idling. Have 20 keys of the same game and want to redeem them to 20 different accounts? It's christmas and you would like to post "Merry Xmas!" to every friend's profile page? Want to make booster
                                 packs, unpack them, or craft badges in large amounts all automatically? Transfer items between accounts? Confirm hundreds of items for sale with one click? Well, you can always find what you need here.</p>
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-wrench icon"></i>
