--- a/terms.html
+++ b/terms.html
@@ -1,17 +1,17 @@
 ---
 layout: page
 title: Terms of Use
-description: "Version: 1.1 | Last Updated: March 2019"
+description: "Version: 1.2 | Last Updated: March 2019"
 image: /images/about-header.jpg
 ---
     <section>
             <p class="paragraph-custom"><br>By using Steamulate (this app), you agree to our Terms of Use. This Terms of Use play an important role in maintaining a positive experience for everyone using Steamulate. Be sure to check back
-                from time to time, as these policies may change.<br><br><strong>About Steam account</strong><br><br>We understand how important your account is and we work hard to protect it. Your logon credentials will only be sent to valid
-                Steam servers, or with your explicit consent, be uploaded to your personal iCloud storage in encrypted form. From time to time, your credentials are stored in encrypted form. Even we are not possible to extract them directly from the encrypted
-                strings. So technically speaking, your account is kept safe from most of hacking attempts. However, do remember Steam has its own ToS and there is a very low possibility that they might take action if they think your behavior is against
-                their ToS. Although if you use this app in a "standard" manner, these things should never happen to you. "Standard" here means you use the app as-is, with intended use case, and are not running a bunch of accounts simultaneously (roughly
-                speaking, you should run no more than 20 bots in the same time, though we don't stop you from adding more). And you should not use the built-in command we provide to harass the other Steam users. In no circumstances shall we be liable
-                for any claim, damages or other liability with regard to your Steam account.<br><br><strong>About Steamulate itself</strong><br><br>When downloading Steamulate from App Store, you should know that the copy you receive is for your personal
-                use only and must not be shared with others. Specifically, as per App Store EULA, you should not have more than 10 accounts sharing the same copy. If we believe your use activity is in violation of our terms, your access to this app will be restricted.<br><br><strong>Declaration</strong><br><br>All
+                from time to time, as these policies may change.<br><br><strong>About Steam account</strong><br><br>We understand how important your account is and we work hard to protect it. Your login credentials will only be sent to valid
+                Steam servers, or with your explicit consent, be uploaded to your personal iCloud storage in an encrypted format. From time to time, your credentials are stored locally in the encrypted format as well, and we will not be able to extract them from the encrypted
+                format—so technically speaking—from our end, your account is kept safe from most hacking attempts. However, do remember Steam has its own ToS and there is a very low possibility that they might take action if they think your account's behavior is against
+                their ToS. With that in mind, if you use this app in the intended manner, these things should not happen to you. Intended here means you use the app as-is, and are not running an excessive amount of accounts simultaneously (roughly
+                speaking, you should run no more than 20 bots in the same time, though we don't stop you from adding more). Also, you should not use the app's built-in command to harass other Steam users.<br><br><strong>About Steamulate itself</strong><br><br>When downloading Steamulate from App Store, you should know that the copy you receive is for your personal
+                use only and must not be shared with others. Specifically, as per App Store EULA, you should not have more than 10 accounts sharing the same copy. If we believe your use activity is in violation of our terms, your access to this app will be restricted.<br><br><strong>Disclaimer</strong><br><br>Upon login, this app will be likely to do these things automatically, according to your configuration:<br>&nbsp; &nbsp; 1. Card farming, which means the app will try to "play" games that have cards left on your account.<br>&nbsp; &nbsp; 2. Handle trade offers and chat messages that are newly arrived and notify you about this.<br>&nbsp; &nbsp; 3. Join our Steam group. (If you don't like it, you can turn it off in settings.)<br> In other cases, the app will only do what you told it to do loyally. Take "Auto Complete Discovery Queue" as an example, the app will only do so if you turn it on in this bot's configuration. So please make sure you understand what you are doing and what the subsequences are before performing any operation. In no circumstances shall we be liable
+                for any claim, damages or other liability with regard to your Steam account.<br><br><strong>Declaration</strong><br><br>All
                 trademarks are property of their respective owners in the US and other countries. We are not affiliated with Valve or Steam in any form.</p>
     </section>
