--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-legal icon"></i>
                             <h3 class="name">Safe to Use</h3>
-                            <p class="description">We understand how important your Steam accounts are because we're gamers too. All your account information, sensitive or not, won't be sent to anyone other than valid Steam network servers, including us. When your credentials are stored
-                                on hard disk, they're always strongly encrypted that even we are not possible to break it directly. We also have a clear privacy policy you should check out, if you would like to know how we're doing to protect them.</p>
+                            <p class="description">We understand how important your Steam accounts are because we're gamers too. All your account information, sensitive or not, won't be sent to anyone other than valid Steam network servers, including us. When it is needed to store your credentials
+                                on hard disk, they're always strongly encrypted that no one will be able to extract them from the encrypted format. We also have a clear privacy policy you should check out, if you would like to know how we're doing to protect them.</p>
                         </div>
                     </div>
                 </div>
