--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                     <h1 class="text-center h1-heading">Why Steamulate?</h1>
                     <p class="text-center p-brief">◎Easy to use</p>
                     <p class="text-center p-brief">◎Lots of cool features</p>
-                    <p class="text-center p-brief">◎Use your old device to farm cards</p>
+                    <p class="text-center p-brief">◎Background mode supported</p>
                     <p class="text-center p-brief">◎The best and the only Steam account manager for iOS</p>
                 </div>
             </div>
@@ -44,7 +44,7 @@ description: Steamulate - A handy toolbox for your Steam accounts.
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-magic icon"></i>
                             <h3 class="name">Works everywhere</h3>
                             <p class="description">Are you managing your Steam accounts on your PC? Do you leave your PC open just to farm trading cards? Be tired of dry console programs? Well, yon don't have to do that anymore. With some magic, now you can farm cards directly
-                                from your phones, regardless of how many accounts you have, with the same—even higher—speed while enjoying the most relaxing user experience.</p>
+                                from your phones, regardless of how many accounts you have, with the same—even higher—speed.</p>
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><i class="fa fa-briefcase icon"></i>
                             <h3 class="name">Complete Toolkit</h3>
