--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home
-description: Steamulate - A handy toolbox for your Steam accounts.
+description: Steamulate - Steam trading cards farmer & account manager, designed specifically for mobile platforms. Multiple accounts supported. Get it now - https://itunes.apple.com/us/app/steamulate/id1453118472?mt=8
 ---
 
 <main>
