--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About
-description: We Are EunoWare
+description: We are EunoWare.
 image: /images/about-header.jpg
 ---
 
